--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,19 +7,26 @@
     <string name="selection_monit">monitorująca</string>
     <string name="selection_admin">administracyjna</string>
     <string name="selection_button">DALEJ</string>
+    <string name="selection_info">Aplikacja administracyjna pozwala na otrzymywanie powiadomień w przypadku opuszczenia przez śledzonego użytkownika wyznaczonej strefy.</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Hasło</string>
-    <string name="action_sign_in">Sign in</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in">Zaloguj się</string>
+    <string name="action_sign_in_short">Zaloguj się</string>
     <string name="error_invalid_password">Podaj hasło</string>
     <string name="error_field_required">Podaj login (adres email)</string>
     <string name="error_login">Niepoprawny login lub hasło</string>
+    <string name="login_info">Jeżeli nie posiadasz konta w systemie TrackingSystem zostanie ono założone automatycznie po wpisaniu danych.</string>
+    <string name="login_remember_me">Zapamiętaj mnie</string>
 
     <!-- Strings related to userActivity -->
     <string name="user_name">Podaj imię (nick) użytkownika śledzonego</string>
     <string name="user_name_error">Podaj poprawne imię (nick)</string>
     <string name="user_info">Po kliknięciu w przycisk aplikacji zostanie uruchomiona w tle. W celu dalszej konfiguracji prosimy o zalogowanie się na stronę trackingSystem.</string>
     <string name="user_toast_info">Aplikacja działa teraz w tle.</string>
+    <string name="user_interval">Czas pomiędzy aktualizacją pozycji</string>
+    <string name="user_interval_hint">Czas w pełnych minutach</string>
+    <string name="user_error_interval">Czas musi być większy od 0.</string>
+    <string name="user_auto_start">Zapamiętaj moje ustawienia</string>
 </resources>
